objects/Facility__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aquatics_Examiner_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aquatics Examiner Service</label>
        <referenceTo>Training_Events__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dates_of_Operation__c</fullName>
        <label>Dates of Operation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Facility_Address_1__c</fullName>
        <label>Facility Address 1</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Address_2__c</fullName>
        <label>Facility Address 2</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_City__c</fullName>
        <label>Facility City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Contact_Email__c</fullName>
        <formula>Facility_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Contact_Phone__c</fullName>
        <formula>Facility_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Operating_Season__c</fullName>
        <label>Facility Operating Season</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Seasonal</fullName>
                </value>
                <value>
                    <fullName>Year-Round</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_Phone__c</fullName>
        <label>Facility Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Facility_State__c</fullName>
        <label>Facility State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Street__c</fullName>
        <label>Facility Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Zip__c</fullName>
        <label>Facility Zip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Indoor_attractions__c</fullName>
        <label>Number of Indoor attractions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Outdoor_attractions__c</fullName>
        <label>Number of Outdoor attractions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <formula>Aquatics_Examiner_Service__r.Product_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Aquatics_Examiner_Service__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seasonal__c</fullName>
        <label>Seasonal?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Seasonal</fullName>
                </value>
                <value>
                    <fullName>Year-Round</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Aquatics_Examiner_Service__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Hours__c</fullName>
        <label>Visit Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Facility</label>
    <nameField>
        <label>Facility</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Seasonal</fullName>
        <active>true</active>
        <description>When &apos;Seasonal?&apos; is set to &apos;Seasonal&apos;, you must populate the &apos;Dates of Operation&apos;.</description>
        <errorConditionFormula>AND(ISPICKVAL( Seasonal__c , &quot;Seasonal&quot;),
ISBLANK( Dates_of_Operation__c),
$Setup.Validation_Rules__c.Bypass_Rules__c = False)</errorConditionFormula>
        <errorDisplayField>Dates_of_Operation__c</errorDisplayField>
        <errorMessage>You must provide Dates of Operation when Seasonal is selected in &apos;Seasonal?</errorMessage>
    </validationRules>
</CustomObject>